# isagog-ai-cli

./: LICENSE  README.md  pyproject.toml
config/: config.toml
isagog/client/: kg_client.py  nlp_client.py
isagog/generator/: sparql_generator.py
isagog/model/: base_query.py  kb_query.py  kg_model.py  kg_query.py  nlp_model.py  ontology.py
isagog/query/: kg_query.py  query.py  sparql_generator.py
src/isagog/client/: kg_client.py  nlp_client.py
src/isagog/model/: kb_query.py  kg_model.py  kg_query.py  nlp_model.py
src/kg-client/: kb_query.py  kg_client.py  kg_model.py
src/nlp-client/: nlp_client.py
